--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+    html {
+        @apply font-mono
+    }
+
+    body {
+        @apply h-screen w-screen m-0
+    }
+
+    /* 
+        html {
+            overflow: hidden;
+            height: 100%;
+        }
+
+        body {
+            overflow: auto;
+            height: 100%;
+        }
+    */
+  }
